# sign-language

./: .dockerignore  .gitignore  Converting_words_to_sentences.py  Dockerfile  README.md  api.py  build.sh  client_camera.py  converting_sentences_to_speech.py  data_collection.py  export_torchscript.py  model.py  requirements.txt  training code.py  training_code.py
.github/workflows/: ci.yml
Final_model_parameters/: action.pth  labels.npy
MP_data/bathroom/0/: 13.npy  17.npy  19.npy  2.npy  20.npy  21.npy  26.npy  28.npy  3.npy  9.npy
MP_data/bathroom/1/: 10.npy  11.npy  15.npy  16.npy  19.npy  2.npy  20.npy  21.npy  22.npy  4.npy
MP_data/bathroom/10/: 1.npy  11.npy  12.npy  14.npy  15.npy  17.npy  21.npy  23.npy  24.npy  27.npy  28.npy  29.npy  3.npy  6.npy  8.npy  9.npy
MP_data/bathroom/11/: 11.npy  13.npy  14.npy  17.npy  2.npy  20.npy  22.npy  25.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy
MP_data/bathroom/12/: 10.npy  12.npy  15.npy  16.npy  19.npy  2.npy  20.npy  21.npy  22.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  5.npy  6.npy  8.npy
MP_data/bathroom/13/: 1.npy  10.npy  11.npy  16.npy  18.npy  19.npy  2.npy  20.npy  21.npy  25.npy  26.npy  29.npy  3.npy  4.npy  5.npy  6.npy  9.npy
MP_data/bathroom/14/: 0.npy  10.npy  12.npy  13.npy  14.npy  15.npy  17.npy  18.npy  19.npy  2.npy  20.npy  22.npy  24.npy  25.npy  26.npy  27.npy  28.npy  4.npy  6.npy  7.npy  9.npy
MP_data/bathroom/15/: 1.npy  10.npy  12.npy  14.npy  15.npy  16.npy  18.npy  (+9 more)
cpp/: CMakeLists.txt  bindings.cpp  inference.cpp  inference.h
tests/: smoke_test.py
(+14303 files in other folders)
